# PRAClubs

./: .gitignore  App.hs  ClubData.txt  Logic.hs  Main.hs  PRAClubs.cabal  Start.sh  TODO  Utils.hs  clubData.yaml  config.yaml  stack.yaml
PRAC/: App.hs  Logic.hs  Utils.hs
PRAC/Page/: Admin.hs  Form.hs  Results.hs  Theme.hs
PRAC/Page/Admin/: Verify.hs
Page/: Form.hs  Theme.hs
