name:               PRAClubs
version:            1.0.0
cabal-version:      >= 1.8
build-type:         Simple

executable          PRAClubs
  main-is:          Main.hs
  other-Modules:    PRAC.Logic
                  , PRAC.Utils
                  , PRAC.App
                  , PRAC.Utils
                  , PRAC.Page.Form
                  , PRAC.Page.Results
                  , PRAC.Page.Theme
  extensions:       EmptyDataDecls
                  , FlexibleContexts
                  , FunctionalDependencies
                  , GeneralizedNewtypeDeriving
                  , MultiParamTypeClasses
                  , OverloadedStrings
                  , DeriveGeneric
                  , QuasiQuotes
                  , RecordWildCards
                  , TemplateHaskell
                  , TypeFamilies
  build-depends:    base
                  , transformers
                  , bytestring
                  , yesod
                  , yaml
                  , text

  ghc-options:    -fwarn-tabs -threaded -O2 -rtsopts -with-rtsopts=-N
